       of corresponding 'need_wakeup' flag in AF_XDP rings.  Enabled by default
       if supported by libbpf.
     * Add option to enable, disable and query TCP sequence checking in
       conntrack.
   - DPDK:
     * Add hardware offload support for output actions
     * Add hardware offload support for matching IPv6 addresses

v2.12.0 - 03 Sep 2019
---------------------
   - DPDK:
     * New option 'other_config:dpdk-socket-limit' to limit amount of
       hugepage memory that can be used by DPDK.
     * Add support for vHost Post-copy Live Migration (experimental).
     * OVS validated with DPDK 18.11.2 which is the new minimal supported
       version.
     * DPDK 18.11.1 and lower is no longer supported.
     * New option 'tx-retries-max' to set the maximum amount of vhost tx
       retries that can be made.
   - OpenFlow:
     * All features required by OpenFlow 1.5 are now implemented, so
       ovs-vswitchd now enables OpenFlow 1.5 by default (in addition to
       OpenFlow 1.0 to 1.4).
     * Removed support for OpenFlow 1.6 (draft), which ONF abandoned.
     * New action "check_pkt_larger".
     * Support for OpenFlow 1.5 "meter" action.
   - Userspace datapath:
     * ICMPv6 ND enhancements: support for match and set ND options type
       and reserved fields.
     * Add v4/v6 fragmentation support for conntrack.
     * New ovs-appctl "dpctl/ipf-set-enabled" and "dpctl/ipf-set-disabled"
       commands for userspace datapath conntrack fragmentation support.
     * New "ovs-appctl dpctl/ipf-set-min-frag" command for userspace
       datapath conntrack fragmentation support.
     * New "ovs-appctl dpctl/ipf-set-max-nfrags" command for userspace datapath
       conntrack fragmentation support.
     * New "ovs-appctl dpctl/ipf-get-status" command for userspace datapath
       conntrack fragmentation support.
     * New action "check_pkt_len".
     * Port configuration with "other-config:priority-tags" now has a mode