@@ -329,6 +329,8 @@ ds_put_flow_action(struct ds *s, const struct rte_flow_action *actions)
         } else {
             ds_put_cstr(s, "  Port-id = null\n");
         }
+    } else if (actions->type == RTE_FLOW_ACTION_TYPE_DROP) {
+        ds_put_cstr(s, "rte flow drop action\n");
     } else {
         ds_put_format(s, "unknown rte flow action (%d)\n", actions->type);
     }
@@ -660,6 +662,9 @@ netdev_dpdk_flow_actions_add_nl(struct flow_actions *actions,
         }
     }
 
+    if (nl_actions_len == 0) {
+        add_flow_action(actions, RTE_FLOW_ACTION_TYPE_DROP, NULL);
+    }
     add_flow_action(actions, RTE_FLOW_ACTION_TYPE_END, NULL);
     return 0;
 }
