@@ -13,6 +13,7 @@ Post-v2.12.0
    - DPDK:
      * Add hardware offload support for output actions
      * Add hardware offload support for matching IPv6 addresses
+     * Add hardware offload support for drop action
 
 v2.12.0 - 03 Sep 2019
 ---------------------
